base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-manager-service
  namespace: kustomize-flux-demo

spec:
  selector:
    app: task-manager-app

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
