base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-manager-ingress
  namespace: kustomize-flux-demo

spec:
  ingressClassName: nginx

  rules:
    - host: task-manager.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: task-manager-service

                port:
                  number: 80
